objects/VisitOps__Visit_Control__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__AgendaApprovalStatusFormula__c</fullName>
        <formula>TEXT(VisitOps__VisitControlVisit__r.VisitOps__Agenda_Approval_Status__c)</formula>
        <label>Agenda Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda_Approval_Status__c</fullName>
        <description>This field is no longer used.</description>
        <label>Agenda Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Agenda Approval Requested</fullName>
                </value>
                <value>
                    <fullName>Agenda Approved</fullName>
                </value>
                <value>
                    <fullName>Agenda Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda__c</fullName>
        <label>Agenda</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agenda draft complete</fullName>
                </value>
                <value>
                    <fullName>Agenda complete</fullName>
                </value>
                <value>
                    <fullName>Agenda issues exist</fullName>
                </value>
                <value>
                    <fullName>Presenters needed</fullName>
                </value>
                <value>
                    <fullName>Rooms needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Agenda_drafted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agenda drafted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__ArrivalDateTimeLocationTZ__c   )</formula>
        <label>Arrival Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Arrival_Date_Time_Location__c</fullName>
        <formula>VisitOps__VisitControlVisit__r.VisitOps__Arrival_Date_and_Time_LocationFormula__c</formula>
        <label>Arrival Date/Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Attendees_confirmed_spelling_checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendees confirmed/spelling checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Catering_Status__c</fullName>
        <label>Catering Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Special catering needed/not ordered</fullName>
                </value>
                <value>
                    <fullName>Catering requested</fullName>
                </value>
                <value>
                    <fullName>Catering Confirmed</fullName>
                </value>
                <value>
                    <fullName>No catering needed</fullName>
                </value>
                <value>
                    <fullName>Catering issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Dates_and_times_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dates and times confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_Survey_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Survey Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Decision_Survey_Status__c</fullName>
        <label>Decision Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Decision survey needed / not sent</fullName>
                </value>
                <value>
                    <fullName>Decision survey sent</fullName>
                </value>
                <value>
                    <fullName>Decision survey not needed</fullName>
                </value>
                <value>
                    <fullName>Decision survey issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Location__c</fullName>
        <formula>DATETIMEVALUE(  VisitOps__Visit__r.VisitOps__DepartureDateTimeLocationTZ__c   )</formula>
        <label>Departure Date (Location)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisitOps__Departure_Date_Time_Location__c</fullName>
        <formula>VisitOps__VisitControlVisit__r.VisitOps__Departure_Date_and_Time_LocationFormula__c</formula>
        <label>Departure Date/Time (Location)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Expenses__c</fullName>
        <label>Expenses</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Invoices needed</fullName>
                </value>
                <value>
                    <fullName>Expenses entered</fullName>
                </value>
                <value>
                    <fullName>Expense issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Expenses_discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expenses discussed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Facilities_Status__c</fullName>
        <label>Facilities Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facilities services needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Facilities services requested</fullName>
                </value>
                <value>
                    <fullName>Facilities services arranged</fullName>
                </value>
                <value>
                    <fullName>Facilities services not needed</fullName>
                </value>
                <value>
                    <fullName>Facilities issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Gifts_Status__c</fullName>
        <label>Gifts Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gifts needed / not ordered</fullName>
                </value>
                <value>
                    <fullName>Gifts requested</fullName>
                </value>
                <value>
                    <fullName>Gifts confirmed</fullName>
                </value>
                <value>
                    <fullName>Gifts not needed</fullName>
                </value>
                <value>
                    <fullName>Gift issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Gifts_confirmed_if_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gifts confirmed (if needed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Ground_Transportation_Status__c</fullName>
        <label>Ground Transportation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ground transportation partially arranged</fullName>
                </value>
                <value>
                    <fullName>Ground transportation requested</fullName>
                </value>
                <value>
                    <fullName>Ground transportation arranged</fullName>
                </value>
                <value>
                    <fullName>Ground transportation not needed</fullName>
                </value>
                <value>
                    <fullName>Ground transportation issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Introduce_Visit_Team_and_discuss_roles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Introduce Visit Team and discuss roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Items_to_Remember__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Items to Remember</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__LeadershipApprovalStatusFormula__c</fullName>
        <formula>TEXT(VisitOps__VisitControlVisit__r.VisitOps__Leadership_Approval_Status__c)</formula>
        <label>Leadership Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Leadership_Approval_Status__c</fullName>
        <description>This field is no longer used.</description>
        <label>Leadership Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Leadership Approval Requested</fullName>
                </value>
                <value>
                    <fullName>Leadership Approved</fullName>
                </value>
                <value>
                    <fullName>Leadership Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Location__c</fullName>
        <formula>VisitOps__VisitControlVisit__r.VisitOps__LocationNameFormula__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Lodging_Status__c</fullName>
        <label>Lodging Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lodging needed / not ordered</fullName>
                </value>
                <value>
                    <fullName>Lodging requested</fullName>
                </value>
                <value>
                    <fullName>Lodging confirmed</fullName>
                </value>
                <value>
                    <fullName>Lodging not needed</fullName>
                </value>
                <value>
                    <fullName>Lodging issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Logistics_and_dietary_needs_reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logistics and dietary needs reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Photographer_Status__c</fullName>
        <label>Photographer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Photographer requestsed</fullName>
                </value>
                <value>
                    <fullName>Photographer confirmed</fullName>
                </value>
                <value>
                    <fullName>Photographer not needed</fullName>
                </value>
                <value>
                    <fullName>Photographer issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Survey_Status__c</fullName>
        <label>Post-Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post-surveys needed / not sent</fullName>
                </value>
                <value>
                    <fullName>Post-surveys sent to attendees</fullName>
                </value>
                <value>
                    <fullName>Post-surveys distributed</fullName>
                </value>
                <value>
                    <fullName>Post-surveys not needed</fullName>
                </value>
                <value>
                    <fullName>Post-survey issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Post_Visit_Survey_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post-Visit Survey Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Survey_Status__c</fullName>
        <label>Pre-Survey Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-surveys needed / not sent</fullName>
                </value>
                <value>
                    <fullName>Pre-surveys sent</fullName>
                </value>
                <value>
                    <fullName>Pre-surveys distributed to presenters</fullName>
                </value>
                <value>
                    <fullName>Pre-surveys not needed</fullName>
                </value>
                <value>
                    <fullName>Pre-survey issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Pre_Visit_Survey_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Visit Survey Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Restaurant_Status__c</fullName>
        <label>Restaurant Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Restaurant needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Restaurant arranged</fullName>
                </value>
                <value>
                    <fullName>Restaurant not needed</fullName>
                </value>
                <value>
                    <fullName>Restaurant issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Security_Status__c</fullName>
        <label>Security Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Security needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Security services requested</fullName>
                </value>
                <value>
                    <fullName>Security arranged</fullName>
                </value>
                <value>
                    <fullName>Security not needed</fullName>
                </value>
                <value>
                    <fullName>Security issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Send_Visit_Owner_Pre_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Visit Owner Pre Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Signage_Status__c</fullName>
        <label>Signage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signage needed / not arranged</fullName>
                </value>
                <value>
                    <fullName>Signage requested</fullName>
                </value>
                <value>
                    <fullName>Signage confirmed</fullName>
                </value>
                <value>
                    <fullName>Signage In Production</fullName>
                </value>
                <value>
                    <fullName>Signage not needed</fullName>
                </value>
                <value>
                    <fullName>Signage issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Status__c</fullName>
        <formula>VisitOps__VisitControlVisit__r.VisitOps__VisitStatus__r.Name</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Strategy_Call_Checklist__c</fullName>
        <description>Introduce Visit Team and clarify roles
Review Visit Process
Confirm dates and times of visit
Review strategy for visit
Confirm attendees (check names, title, spelling)
Confirm attendee arrangements
Review dietary requirements
Review Agenda
Discuss expenses for visit
Confirm surveys needed (pre, post, decision) and review process
Confirm gifts needed for guests
confirm dress code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Strategy Call Checklist</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Strategy_Call_Status__c</fullName>
        <label>Strategy Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategy Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Strategy Call Complete</fullName>
                </value>
                <value>
                    <fullName>Strategy Call Not Needed</fullName>
                </value>
                <value>
                    <fullName>Strategy Call Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__Strategy_Call__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Strategy Call Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Surveys_confirmed_pre_post_decision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surveys confirmed (pre, post, decision)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Test_VOC_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test VOC Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Videographer_Status__c</fullName>
        <label>Videographer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Videographer requested</fullName>
                </value>
                <value>
                    <fullName>Videographer confirmed</fullName>
                </value>
                <value>
                    <fullName>Videographer not needed</fullName>
                </value>
                <value>
                    <fullName>Videographer issues exist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__VisitControlVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Visit Controls</relationshipLabel>
        <relationshipName>VisitControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitNameFormula__c</fullName>
        <formula>VisitOps__VisitControlVisit__r.VisitOps__VisitName__c</formula>
        <label>Visit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__VisitTeamNotes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Notes</label>
        <length>999</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Visit Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Team_Notes__c</fullName>
        <description>This field is no longer jused but not deleting it so that it doesnt create problems for Managed Package.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Team_Post_Visit_Comments__c</fullName>
        <description>Post Visit comments from visit team.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Visit Team Post Visit Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit_Type__c</fullName>
        <formula>VisitOps__VisitControlVisit__r.VisitOps__Visit_Type_Formula__c</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>VisitOps__Visit__c</referenceTo>
        <relationshipLabel>Visit Controls</relationshipLabel>
        <relationshipName>Visit_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitOps__test__c</fullName>
        <label>test</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test1</fullName>
                </value>
                <value>
                    <fullName>test2</fullName>
                </value>
                <value>
                    <fullName>test4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Visit Control</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__Visit__c</columns>
        <columns>VisitOps__VisitNameFormula__c</columns>
        <columns>VisitOps__Strategy_Call_Status__c</columns>
        <columns>VisitOps__Items_to_Remember__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VC{0000}</displayFormat>
        <label>Visit Control Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>